Improve run instructions